<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <PreferenceCategory android:title="@string/pref_user_profile" >
        <com.probe.aki.tuulikello.ObservationSettingsPreference
            android:title="@string/pref_user_obserstation"
            android:summary="@string/pref_user_obserstationinfo"
            android:key="prefUserObservationStation"/>
        />
        <EditTextPreference
            android:title="@string/pref_user_forecat"
            android:summary="@string/pref_user_forecatstationinfo"
            android:key="prefUserForecastStation"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:lines="20"
            android:minLines="3"
            android:scrollHorizontally="false"
            android:scrollbars="vertical"
            android:singleLine="false" />
        />
    </PreferenceCategory>
</PreferenceScreen>