<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <EditText
                android:id="@+id/editName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="textPostalAddress"
                android:hint="@string/station_name" />

            <EditText
                android:id="@+id/editSidName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/fmisid_code"
                android:inputType="number|none" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Spinner
                android:id="@+id/stationtypeSpinner"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:entries="@array/stationtype_arrays"
                android:prompt="@string/stationtype_prompt" />
            <EditText
                android:id="@+id/editStationPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:inputType="textPassword"
                android:hint="@string/station_password" />
        </TableRow>
        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Spinner
                android:id="@+id/tableSpinner"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/removebutton" />
            <Button
                android:id="@+id/editButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/savebutton" />
            <Button
                android:id="@+id/newButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/newbutton" />
        </TableRow>
    </TableLayout>
</LinearLayout>